[tool.poetry]
name = "systemd-py"
version = "0.1.0"
description = ""
authors = ["amiwrpremium <amiwrpremium@gmail.com>"]
readme = "README.md"
packages = [{include = "systemd_py"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
